compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__value_imported_as_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import rakun/wibble.{type Wobble}"
---
----- SOURCE CODE
-- rakun/wibble.rakun
pub record Wibble {
               Wobble
             }

-- main.rakun
import rakun/wibble.{type Wobble}

----- ERROR
error: Unknown module type
  ┌─ /src/one/two.rakun:1:22
  │
1 │ import rakun/wibble.{type Wobble}
  │                      ^^^^^^^^^^^ Did you mean `Wobble`?

`Wobble` is only a value, it cannot be imported as a type.
